--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>十二星座資訊</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="/js/script.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
     <!-- 首頁區域 -->
