--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
@@ -42,3 +43,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
