--- a/index.html
+++ b/index.html
@@ -5,36 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>十二星座資訊</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="script.js" defer></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-
-        .container {
-            padding: 20px;
-        }
-
-        #zodiac-page {
-            display: none;
-            opacity: 0;
-            transition: opacity 0.5s;
-        }
-
-        .fade-in {
-            opacity: 1;
-        }
-
-        button {
-            margin: 5px;
-            padding: 10px;
-            cursor: pointer;
-        }
-    </style>
+    <script src="script.js"></script>
 </head>
 <body>
+
     <!-- 首頁區域 -->
     <div class="container" id="home-page">
         <h1>選擇你的星座</h1>
