--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
         <!-- 圖片置中 -->
         <p id="zodiac-dates"></p>
         <p id="zodiac-traits"></p>
+        <p id="zodiac-career"></p>
+        <p id="zodiac-loveMatch"></p>
+        <p id="zodiac-element"></p>
+        <p id="zodiac-rulingPlanet"></p>
         <button id="back-home-button">返回首頁</button>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
