--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <button class="zodiac-button pisces" data-sign="pisces">雙魚座</button>
         </p>
 
-    <button id="random-button">隨機顯示星座</button>
+    <button id="random-button">今日貴人星座</button>
     </div>
     <div id="zodiac-page" style="display:none; text-align: center;">
         <h2 id="zodiac-name"></h2>
