--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <p id="zodiac-dates"></p>
         <p id="zodiac-traits"></p>
         <p id="zodiac-career"></p>
-        <p id="zodiac-loveMatch"></p>
+        <p id="zodiac-love-match"></p>
         <p id="zodiac-element"></p>
-        <p id="zodiac-rulingPlanet"></p>
+        <p id="zodiac-ruling-planet"></p>
         <button id="back-home-button">返回首頁</button>
     </div>
     <script src="script.js"></script>
