--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <button id="random-button">今日貴人星座</button>
     </div>
-    <div id="zodiac-page" style="display:none; text-align: left;">
+    <div id="zodiac-page" style="display:none; text-align: center;">
         <h2 id="zodiac-name"></h2>
         <img id="zodiac-image" src="" alt="Zodiac Image" style="display:block; margin: 0 auto;">
         <p id="zodiac-dates"></p>
